public/css/delta.css
.search-section {
    width: 100%;
    align-items: center;
    text-align: center;
}

.head-section {
    width: 90%;
    align-items: center;
    text-align: center;
    margin: auto;
}

.section-about {
    width: 80%;
    align-items: center;
    text-align: center;
    margin: 30px auto;
    padding-top: 20px;
    padding-bottom: 20px;
}

.section-about p {
    width: 75%;
    font-weight:bolder;
    font-size:20px;
    padding-top:20px;
}

.section-about h1 {
    font-weight:bolder;
    padding-bottom: 20px;
}

.section-about h3 {
    font-weight:bolder;
    padding-top:20px;
    width: 75%;
}

.section-a {
    width: 90%;
    align-items: center;
    text-align: center;
    margin: 10px auto;
    padding-top: 20px;
    padding-bottom: 20px;
}

.section-b {
    width: 90%;
    align-items: center;
    text-align: center;
    margin: 30px auto;
    padding-top: 20px;
    padding-bottom: 20px;
}

.section-b p {
    width: 80%;
    font-weight:bolder;
    font-size:20px;
    padding-top:20px;
}

.section-b h1 {
    font-weight:bolder;
    padding-bottom: 20px;
}

.section-b h3 {
    font-weight:bolder;
    padding-top:20px;
}

.section-b h5 {
    font-size: 2.5rem;
}

.section-c {
    width: 90%;
    align-items: center;
    text-align: center;
    margin: 10px auto;
}

/* we sell premium domains... */

.top-bar {
    width: 90%;
    align-items: center;
    text-align: center;
    margin: 35px auto;
}

.top-bar h4 {
    font-size: 22px;
}

.btn-group button {
    display: inline-block;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    width: 200px;
    background-color: #717fe0; /* Green background */
    border: 2px solid black; /* Green border */
    color: white; /* White text */
    padding: -10px 10px 10px 10px; /* Some padding */
    cursor: pointer; /* Pointer/hand icon */
    height: 50px; /* Set a width if needed */
     /* Make the buttons appear below each other */
    margin: 20px 5px 20px 5px;
    box-shadow: 5px 10px 18px rgb(119, 46, 202);
}


  .btn-group button:not(:last-child) {
    border-bottom: none; /* Prevent double borders */
  }

  /* Add a background color on hover */
  .btn-group button:hover {
    background-color: orange;
  }

.card-bodyex {
    background-color: white;
    width: 100%; /*bottom portion of card main text field*/
}

.card-img-topex {
    width: 100%;
    height: 100%;
}

.column-ex {
    float: center;
    width: 100%;
    padding: 0px 16px; /*100px 1px 10px 200px;*/
  }

.rowex {
    display:inline-block;
    margin: 0 -5px;
}

.rowex:after {
    content: "";
    display: inline-block;
    clear: both;
}

.w3-container {
    background: powderblue;
    width: 90%;
    height: 50%;
    justify-content: center;
    text-align: center;
}

.w3-container button {
    display: inline-block;
    float: left;
    clear: right;
}

.w3-container h1{
    padding-top: 10px;
}

.w4-container {
    background: powderblue;
    width: 90%;
    height: 50%;
    justify-content: center;
    text-align: center;
}

.w4-container button {
    display: inline-block;
    float: right;
}

.footer-container {
    width: 90%;
    align-items: center;
    justify-content: center;
    margin: auto;
    text-decoration: none;
    display: flexbox;
}

.container-contact {
    width: 50%;
    height: 530px;
    justify-content: space-between;
    margin: 20px 0px 0px 0px;
    border-radius: 5px;
    background-color: powderblue;
    padding: 10px;
}

.container-contact select, textarea {
    width: 100%; /* Full width */
    padding: 12px; /* Some padding */
    border: 1px solid #ccc; /* Gray border */
    border-radius: 4px; /* Rounded borders */
    box-sizing: border-box; /* Make sure that padding and width stays in place */
    margin-top: 0px; /* Add a top margin */
    margin-bottom: 10px; /* Bottom margin */
    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
  }

.container-contact label {
    padding: 12px 12px 12px 0;
    width: 100%;
    display: inline-block;
}

.container-contact input[type=submit] {
    background-color: purple;
    color: white;
    padding: 12px 20px 10px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    margin-bottom: 10px;
}

.container-contact input[type=text] {
    padding: 10px 10px 10px 10px;
    border: none
    border-radius: 4px;
    cursor: pointer;
    width: 60%;
}

.container-contact input[type=email] {
    padding: 10px 10px 10px 10px;
    border: none
    border-radius: 4px;
    cursor: pointer;
    width: 60%;
}

.container {
    display: flex;
    width: 100%;
    height: auto;
    margin: auto;
    justify-content: center;

}

.containert {
    display: flex;
    width: 85%;
    height: auto;
    margin: auto;
    padding-bottom: 30px;
    padding-top: 30px;
    padding-left: 20px;
    padding-right: 20px;
    justify-content: center;

}

.containert h4 {
    font-size: 24px;
    font-weight: bolder;
    color: purple;
}

.containery {
    display: flex;
    width: 85%;
    height: auto;
    margin: auto;
    padding-bottom: 10px;
    padding-top: 10px;
    padding-left: 20px;
    padding-right: 20px;
    justify-content: center;
}


.containery a {
    padding-top: 30px;
    padding-bottom: 30px;
    padding-right: 20px;
    margin: auto;
    padding-bottom: 30px;
    font-size: 25px;
    font-weight: bolder;
    text-decoration: none;
}

.containery p {
    padding-top:10px;
    padding-bottom:10px;
    color: purple;
    font-size: 20px;
    line-height: 1.7em;
}

.containery h3 {
    padding-top:10px;
    padding-bottom:30px;
    color: purple;
    font-size: 24px;
}


.containerz {
    display: flex;
    width: 90%;
    height: auto;
    margin: auto;
    padding-bottom: 10px;
    padding-top: 10px;
    justify-content:center;
}

.container-table {
    width: 50%;
    align-items: center;
    justify-content: center;
    margin: auto;
}

.site-search {
    background-color: purple;
    width: 300px;
    height: 60px;
    border-radius: 5px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

form.site-search {
    padding-top: 30px;
    padding-bottom: 30px;
    margin: 20px 20px 20px 20px;
}

form.site-search input[type=text] {
    height: 30px;
    width: 95%;
    float: center;
    font-size: 12px;
    padding: 0px 10px 0px 10px;
    border: 2px grey;
    margin-left: 10px;
}

form.site-search button {
    float: right;
    width: 30%;
    padding: 20px;
    color: white;
    font-size: 20px;
    cursor: pointer;
}

form.site-search::after {
    content: "";
    clear: both;
    display: table;
}

.box{
    width: 32%;
    height: auto;
    border: 1px solid #ccc;
    margin-right: 1%;
    margin-left: 1%;
    background: white;
    border-radius: 10px;
    transition: 0.9;
}

.box:hover{
    box-shadow: 0 0 11px rgba(250, 250, 250, 0.5);
    cursor: pointer;
}

img{
    width: 100%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

h3,p{
    text-align: center;
    color: rgb(104, 92, 92);
}

p{
    font-size: 15px;
    padding: 0 5px;
}

/* Add a black background color to the top navigation */
.topnav {
    width: 90%;
    display: block;
    align-items: center;
    justify-content: center;
    margin:auto;
    padding-top: 10px;
 }

.topnav li {
      float: center;
      background-color: transparent;
      display:inline;
  }

  /* Style the links inside the navigation bar */
  .topnav a {
    color: purple;
    padding: 0px 40px 0px 40px;
    text-decoration: none;
    font-size: 22px;
    font-weight: bolder;
    display:inline-block;
  }

  /* Change the color of links on hover */
  .topnav a:hover {
    background-color: transparent;
    color: orange;
  }

  /* Add a color to the active/current link */
  .topnav a.active {
    background-color: purple;
    color: white;
  }

  .search-btn {
      margin-top: 20px;
      margin-bottom: 30px;
  }

//FAQ collapsible controls

.primary{
    display : flex !important;
    order : inherit !important;
    flex-direction: column;
   }

   input[type='checkbox'] {
       display: none;
   }
   .wrap-collabsible {
       width: 75%;
       margin: 10px auto;
       font-size: 22px;
   }

.content-inner h5{
    align-items: center;
    justify-content: center;
    margin: auto;
    text-align: center;
    padding-top: 10px;
}

.content-inner p{
    width: 70%;
    font-size: 16px;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin: auto;
}

.lbl-toggle {
        display: block;
        font-weight: bold;
        text-align: center;
        padding: 1rem;
        color: purple;
        cursor: pointer;
        border-radius: 7px;
        transition: all 0.25s ease-out;
   }
   .lbl-toggle:hover {
        color: #FFF;
   }
   .lbl-toggle::before {
       content: ' ';
       display: inline-block;
       border-top: 5px solid transparent;
       border-bottom: 5px solid transparent;
       border-left: 5px solid currentColor;
       vertical-align: middle;
       margin-right: .7rem;
       transform: translateY(-2px);
       transition: transform .2s ease-out;
   }
    .toggle:checked+.lbl-toggle::before {
       transform: rotate(90deg) translateX(-3px);
   }
    .collapsible-content {
        max-height: 0px;
        overflow: hidden;
        transition: max-height .25s ease-in-out;
    }

    .toggle:checked + .lbl-toggle + .collapsible-content {
         max-height: 100vh;
   }
   .toggle:checked+.lbl-toggle {
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0;
   }
   .collapsible-content .content-inner {
       color: purple;
       border-bottom-left-radius: 7px;
       border-bottom-right-radius: 7px; padding: .5rem 1rem;
       }
   .collapsible-content p {
       margin-bottom: 0;
   }

.hamburger {
    display: none;
}

.fa {
    color: #FFFFFF;
    padding-right: 10px;
    padding-top: 5px;
}

.table {
    background-color: dodgerblue;
    color: purple;
}

.user-login {
    padding-right: 30px;
}

.user-register {
    padding-right: 30px;
}

.dashboard {
    padding-right: 30px;
}

@media (max-width: 600px){

   .container{
        width: 100%;
    }

    .containery {
        width: 90%;
        display: block;
        align-items: center;
        justify-content: center;
    }

    .section-a {
        font-size: 1px;
    }

    .hamburger {
        display: block;
        cursor: pointer;
    }

}
@media (max-width: 600px){
    .container{
        width: 85%;
        display: block;
    }

    .containery {
        width: 80%;
        display: block;
        align-items: center;
        justify-content: center;
    }

    .box{
        width: 100%;
        margin-bottom: 4%;
    }
}

@media (max-width: 700px){
    .container{
        width: 100%;
    }

    .containery {
        width: 90%;
        display: block;
        align-items: center;
        justify-content: center;
        margin: auto;
    }

    //contact form responsiveness
@media screen and (max-width: 600px) {
    .container-contact {
        width: 30%;
        height: 530px;
        justify-content: space-between;
        margin: 0px 0px 0px 0px;
        border-radius: 5px;
        background-color: powderblue;
        padding: 10px;
    }

